modified some UI/UX like the figma design

--- a/standard_code/src/index.css
+++ b/standard_code/src/index.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
 
@@ -34,6 +35,8 @@
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
+    
+    --hot-pink: 329 89% 49%; /* Added color variable for #E0178C */
 
     --radius: 1rem;
   }
@@ -151,4 +154,37 @@
 
 .font-game-text {
   font-family: 'VT323', monospace;
+}
+
+/* Pixelated text style with green color and white outline */
+.pixel-text {
+  font-family: 'Press Start 2P', cursive;
+  color: #006400; /* Dark green */
+  text-shadow: 
+    2px 0 0 #fff,
+    -2px 0 0 #fff,
+    0 2px 0 #fff,
+    0 -2px 0 #fff,
+    1px 1px 0 #fff,
+    -1px -1px 0 #fff,
+    1px -1px 0 #fff,
+    -1px 1px 0 #fff;
+  letter-spacing: 0.05em;
+  line-height: 1.4;
+}
+
+.pixel-text-lg {
+  font-family: 'Press Start 2P', cursive;
+  color: #006400; /* Dark green */
+  text-shadow: 
+    3px 0 0 #fff,
+    -3px 0 0 #fff,
+    0 3px 0 #fff,
+    0 -3px 0 #fff,
+    2px 2px 0 #fff,
+    -2px -2px 0 #fff,
+    2px -2px 0 #fff,
+    -2px 2px 0 #fff;
+  letter-spacing: 0.1em;
+  line-height: 1.5;
 }
